[gd_scene format=3 uid="uid://2fqae27pa5xt"]

[ext_resource type="PackedScene" uid="uid://wr2n42q2y7uh" path="res://scenes/player.tscn" id="1_d6f80"]
[ext_resource type="Texture2D" uid="uid://dyyu24vcfo0pb" path="res://assets/sprites/world_tileset.png" id="1_p0q0o"]
[ext_resource type="Script" uid="uid://bxx07aa4p5urh" path="res://scripts/tut_game.gd" id="1_yv17d"]
[ext_resource type="PackedScene" uid="uid://dc3o0conf3881" path="res://scenes/ui.tscn" id="3_kv3my"]
[ext_resource type="PackedScene" uid="uid://b5yp6adj5fvi" path="res://scenes/item_spawn_area.tscn" id="3_yu2b8"]
[ext_resource type="PackedScene" uid="uid://cwdaf75srurvw" path="res://scenes/platform.tscn" id="5_gk7kp"]
[ext_resource type="PackedScene" uid="uid://dh5fsiijqflfr" path="res://scenes/Pickups/gun.tscn" id="6_wfshc"]
[ext_resource type="PackedScene" uid="uid://3adyqoxk2iii" path="res://scenes/Pickups/sword.tscn" id="7_coqna"]
[ext_resource type="PackedScene" uid="uid://cuom1kpwfx1g4" path="res://scenes/Pickups/shield.tscn" id="8_ykmxn"]
[ext_resource type="PackedScene" uid="uid://d2o7213gs5etc" path="res://scenes/killzone.tscn" id="9_yu2b8"]
[ext_resource type="PackedScene" uid="uid://c6eurvo11hoql" path="res://scenes/slime.tscn" id="10_0otvx"]
[ext_resource type="AudioStream" uid="uid://c5nk0me3l3te8" path="res://assets/music/time_for_adventure.mp3" id="13_kv3my"]
[ext_resource type="FontFile" uid="uid://bd0hidewwb6n2" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="14_endui"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kv3my"]
load_path = "res://.godot/imported/Asset_13.png-dca5bc2db883b9f20774ee82d6faffb3.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yv17d"]
texture = ExtResource("1_p0q0o")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0.17985916)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.935337, 8, -5.755479, 8, 1.0791531, -8, 0.8992939)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0.17985916)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.935337, 8, -5.755479, 8, 1.0791531, -8, 0.8992939)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, 0.17985916)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.935337, 8, -5.755479, 8, 1.0791531, -8, 0.8992939)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.26115417, 8, 0.26115608, 8, 4.78784, -8, 4.613737, -8, 4.4396324)
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_d1dsa"]
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_yv17d")

[sub_resource type="Animation" id="Animation_p0q0o"]
resource_name = "Move Platform"
length = 1.5333333
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(418, 52), Vector2(512, 52)]
}

[sub_resource type="Animation" id="Animation_yv17d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(418, 52)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfshc"]
_data = {
&"Move Platform": SubResource("Animation_p0q0o"),
&"RESET": SubResource("Animation_yv17d")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0otvx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yu2b8"]
size = Vector2(113, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0otvx"]
size = Vector2(15.5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl1ks"]
size = Vector2(14, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv3my"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qfv2"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxtc3"]
size = Vector2(12, 1.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b56nn"]
size = Vector2(12.5, 2)

[node name="Tut_Game" type="Node2D" unique_id=47072123]
position = Vector2(-1, 0)
script = ExtResource("1_yv17d")

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=1899154860]
repeat_size = Vector2(1, 0)
repeat_times = 100

[node name="Asset13" type="Sprite2D" parent="Parallax2D" unique_id=1117674857]
position = Vector2(-284, -206)
scale = Vector2(1.4890966, 2.044199)
texture = SubResource("CompressedTexture2D_kv3my")
centered = false

[node name="TileMap" type="TileMap" parent="." unique_id=1196064487]
tile_set = SubResource("TileSet_d1dsa")
format = 2
layer_0/name = "back"
layer_0/tile_data = PackedInt32Array(131062, 65538, 0, 131061, 65538, 0, 131060, 65538, 0, 65524, 65538, 0, -12, 65538, 0, -65548, 65538, 0, -65547, 65538, 0, -131083, 65538, 0, -131082, 65538, 0, -196618, 65538, 0, -196617, 65538, 0, -262153, 65538, 0, -262152, 65538, 0, 131162, 2, 0, 65610, 2, 0, 65611, 2, 0, 65612, 2, 0)
layer_1/name = "mid"
layer_1/tile_data = PackedInt32Array(327671, 2, 1, 327672, 2, 1, 327673, 2, 1, 327674, 2, 1, 327675, 2, 1, 327676, 2, 1, 327677, 2, 1, 327678, 2, 1, 327679, 2, 1, 262144, 2, 1, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 1, 262151, 2, 1, 262152, 2, 1, 196599, 2, 1, 196600, 2, 1, 196601, 2, 1, 262137, 2, 1, 262136, 2, 1, 262135, 2, 1, 131079, 2, 1, 196615, 2, 1, 196616, 2, 1, 131080, 2, 1, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 131063, 2, 0, 131064, 2, 0, 131065, 2, 0, 65543, 2, 1, 65544, 2, 1, 196614, 2, 1, -65522, 2, 1, 15, 2, 1, 16, 2, 1, 17, 2, 1, 65551, 131074, 1, 65552, 131074, 1, 65553, 131074, 1, 14, 131074, 1, 262153, 2, 0, 262154, 2, 0, 262158, 131074, 0, 262159, 131074, 0, 262160, 131074, 0, 262161, 131074, 0, -65521, 2, 1, -131058, 2, 0, -131057, 2, 0, -65520, 2, 0, -65519, 2, 0, 393207, 2, 1, 393208, 2, 1, 393209, 2, 1, 393210, 2, 1, 393211, 2, 1, 393212, 2, 1, 393213, 2, 1, 393214, 2, 1, 393215, 2, 1, 327680, 2, 1, 327681, 2, 1, 327682, 2, 1, 327683, 2, 1, 327684, 2, 1, 327685, 2, 1, 327686, 2, 1, 327687, 2, 1, 327688, 131074, 1, 327689, 131074, 1, 327690, 131074, 1, 327691, 131074, 1, 327692, 131074, 1, 327693, 131074, 1, 327694, 131074, 1, 327695, 131074, 1, 327696, 131074, 1, 327697, 131074, 1, 327698, 131074, 1, 327699, 131074, 1, 327700, 131074, 1, 262162, 131074, 0, 262163, 2, 0, 262164, 2, 0, 327701, 2, 1, 262166, 2, 1, 262167, 2, 1, 262168, 2, 1, 327703, 2, 1, 327702, 2, 1, 327704, 2, 1, 262165, 2, 0, 196630, 2, 0, 196631, 2, 0, 196632, 2, 0, 196641, 262146, 0, 196642, 262146, 0, 196643, 262146, 0, 262180, 262146, 0, 262181, 262146, 0, 327718, 262146, 0, 327719, 262146, 0, 327720, 262146, 0, 262177, 262146, 1, 327713, 262146, 1, 327714, 262146, 1, 262178, 262146, 1, 262179, 262146, 1, 327715, 262146, 1, 327716, 262146, 1, 327717, 262146, 1, 8, 2, 1, 7, 2, 1, 6, 2, 1, 65542, 2, 1, 131078, 2, 1, -65529, 2, 1, -131065, 2, 0, -131064, 2, 0, -65528, 2, 1, -131063, 2, 0, -65527, 2, 1, 9, 2, 1, -131066, 2, 0, -65530, 2, 1, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 196617, 327682, 9, 196618, 327682, 9, 196619, 327682, 9, 196620, 327682, 9, 196621, 327682, 9, 196622, 327682, 9, 196623, 327682, 9, 327723, 2, 0, 327724, 2, 0, 327725, 2, 0, 327726, 2, 0, 262190, 327682, 9, 393264, 2, 0, 393265, 2, 0, 393266, 2, 0, 393267, 2, 0, 327733, 2, 0, 327734, 2, 0, 327735, 2, 0, 327736, 2, 0, 327729, 327682, 9, 262199, 327682, 9, 262202, 2, 0, 327738, 2, 1, 327739, 2, 0, 327740, 2, 0, 327741, 2, 0, 327742, 2, 0, 327743, 2, 0, 327744, 2, 1, 262208, 2, 0, 131132, 2, 0, 131134, 2, 0, 196602, 2, 0, 196608, 2, 0, 262138, 2, 1, 131139, 2, 0, 131140, 2, 0, 131141, 2, 0, 327747, 2, 0, 327748, 2, 0, 327749, 2, 0, 131145, 2, 0, 131146, 2, 0, 131147, 2, 0, 131148, 2, 0, 327752, 2, 0, 327753, 2, 0, 327754, 2, 0, 327755, 2, 0, 327756, 2, 0, 327757, 2, 0, 327758, 2, 0, 131149, 2, 0, 262223, 2, 0, 196688, 2, 0, 131153, 2, 0, 131154, 2, 0, 131155, 2, 0, 131163, 2, 0, 131164, 2, 0, 131165, 2, 0, 131166, 2, 0, 131167, 2, 0, 262215, 2, 0, 327751, 2, 1, 87, 65538, 0, -65449, 65538, 0, -130985, 65538, 0, -196521, 65538, 0, 196693, 2, 0, 196694, 2, 0, 196695, 2, 0, 65597, 2, 0, 131168, 2, 0, 131169, 2, 1, 131170, 2, 1, 131171, 2, 1, 131172, 2, 0, 131173, 2, 0, 65633, 2, 0, 65634, 2, 0, 65635, 2, 0, 65630, 327682, 9, 131174, 2, 0, 65639, 2, 0, 104, 2, 0, -65431, 2, 0, -130966, 2, 0, -196501, 2, 0, -262036, 2, 0, -327571, 2, 0, -393106, 2, 0, -458641, 2, 0, -524176, 2, 0, 131175, 2, 1, 131176, 2, 1, 131177, 2, 1, 131178, 2, 1, 131179, 2, 1, 131180, 2, 1, 131181, 2, 1, 131182, 2, 1, 131183, 2, 1, 131184, 2, 1, -458640, 2, 1, -393104, 2, 1, -327568, 2, 1, -262032, 2, 1, -196496, 2, 1, -130960, 2, 1, -65424, 2, 1, 112, 2, 1, 65648, 2, 1, -393105, 2, 1, -327569, 2, 1, -262033, 2, 1, -196497, 2, 1, -130961, 2, 1, -65425, 2, 1, 111, 2, 1, 65647, 2, 1, 65640, 2, 1, 65641, 2, 1, 65642, 2, 1, 65643, 2, 1, 65644, 2, 1, 65645, 2, 1, 65646, 2, 1, 105, 2, 1, 106, 2, 1, 107, 2, 1, 108, 2, 1, 109, 2, 1, 110, 2, 1, -327570, 2, 1, -262034, 2, 1, -196498, 2, 1, -130962, 2, 1, -65426, 2, 1, -262035, 2, 1, -196499, 2, 1, -130963, 2, 1, -65427, 2, 1, -130965, 2, 1, -65429, 2, 1, -130964, 2, 1, -65428, 2, 1, -65430, 2, 1, -196500, 2, 1, 131185, 2, 1, 131186, 2, 1, 131187, 2, 1, 131188, 2, 1, 131189, 2, 1, 118, 65538, 0, 65654, 65538, 0, 131190, 65538, 0, 65650, 2, 1, 65651, 2, 1, 65652, 2, 1, -327562, 65538, 0, -262026, 65538, 0, -196490, 65538, 0, -655242, 65538, 0, -589706, 65538, 0, -524170, 65538, 0, -65418, 327682, 9, -393098, 327682, 9, 131191, 2, 1, 131192, 2, 1, 131193, 2, 1, 131194, 2, 1, 65657, 65538, 4, 65658, 65538, 4, 65656, 65538, 4, 131195, 2, 1, 131196, 2, 1, 131197, 2, 1, -589699, 2, 0, -524163, 2, 1, -458627, 2, 1, -393091, 2, 1, -327555, 2, 1, -262019, 2, 1, -196483, 2, 1, -130947, 2, 1, -65411, 2, 1, 125, 2, 1, 65661, 2, 1, 124, 65538, 4, 65653, 2, 1, -65414, 65538, 4, -65415, 65538, 4, -65416, 65538, 4, 65659, 65538, 4, -196486, 65538, 4, -196487, 65538, 4, -196488, 65538, 4, -130948, 65538, 4, -262020, 65538, 4, -327558, 65538, 4, -327559, 65538, 4, -327560, 65538, 4, -393092, 65538, 4, -458630, 65538, 4, -458631, 65538, 4, -458632, 65538, 4, -524164, 65538, 4, -589702, 65538, 4, -589703, 65538, 4, -589704, 65538, 4, -589698, 2, 0, -589697, 2, 0, -589696, 2, 0, -589695, 2, 0, -589694, 2, 0, -589693, 2, 0, -589692, 2, 0)

[node name="TestUI" parent="." unique_id=2132827783 instance=ExtResource("3_kv3my")]

[node name="Player" parent="." unique_id=771106788 instance=ExtResource("1_d6f80")]
z_index = 5
position = Vector2(-122, -7)

[node name="Camera2D" type="Camera2D" parent="Player" unique_id=1062799658]
limit_left = -9999713
limit_top = -10000027
limit_right = 10000287
limit_bottom = 73
position_smoothing_enabled = true

[node name="Spawn Area" parent="." unique_id=1951064101 instance=ExtResource("3_yu2b8")]
position = Vector2(-256, 96)
point1 = Vector2(150, 0)
point2 = Vector2(2300, -170)
item_radius = 16.0
player_path = NodePath("../Player")
min_distance_from_player = 70.0
spawn_number_of_items = 10

[node name="Gun" parent="." unique_id=518531113 instance=ExtResource("6_wfshc")]
position = Vector2(-156, 9)

[node name="Platform" parent="." unique_id=944241601 instance=ExtResource("5_gk7kp")]
position = Vector2(-58, 8)

[node name="Platform2" parent="." unique_id=1125760886 instance=ExtResource("5_gk7kp")]
position = Vector2(-2, -5)

[node name="Platform3" parent="." unique_id=1786895388 instance=ExtResource("5_gk7kp")]
position = Vector2(49, -19)

[node name="Platform4" parent="." unique_id=1223748519 instance=ExtResource("5_gk7kp")]
position = Vector2(418, 52)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platform4" unique_id=1004781561]
libraries/ = SubResource("AnimationLibrary_wfshc")
autoplay = &"Move Platform"

[node name="Sword" parent="." unique_id=1607803304 instance=ExtResource("7_coqna")]
position = Vector2(80, 48)

[node name="Shield" parent="." unique_id=1066369259 instance=ExtResource("8_ykmxn")]
position = Vector2(-120, 1)

[node name="Killzone" parent="." unique_id=768880633 instance=ExtResource("9_yu2b8")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone" unique_id=508683822]
position = Vector2(-219, 109)
shape = SubResource("WorldBoundaryShape2D_0otvx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone" unique_id=1262155590]
position = Vector2(199.5, 60.5)
shape = SubResource("RectangleShape2D_yu2b8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Killzone" unique_id=1625269317]
position = Vector2(743.75, 78)
shape = SubResource("RectangleShape2D_0otvx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Killzone" unique_id=2023161241]
position = Vector2(889, 78)
shape = SubResource("RectangleShape2D_sl1ks")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Killzone" unique_id=1311791032]
position = Vector2(793, 93.5)
shape = SubResource("RectangleShape2D_kv3my")

[node name="Slime" parent="Killzone" unique_id=1873282784 instance=ExtResource("10_0otvx")]
position = Vector2(1018, 68)

[node name="Slime3" parent="Killzone" unique_id=671777631 instance=ExtResource("10_0otvx")]
position = Vector2(1178, 68)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Killzone" unique_id=1317455388]
position = Vector2(1513, 30)
shape = SubResource("RectangleShape2D_6qfv2")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Killzone" unique_id=292729262]
position = Vector2(1897, -1.25)
shape = SubResource("RectangleShape2D_xxtc3")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Killzone" unique_id=435828607]
position = Vector2(1896.75, -81)
shape = SubResource("RectangleShape2D_b56nn")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="." unique_id=1748429650]
stream = ExtResource("13_kv3my")
autoplay = true

[node name="EndGameOverlay" type="Control" parent="." unique_id=1821683776]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dim" type="ColorRect" parent="EndGameOverlay" unique_id=1439011463]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.62)

[node name="CenterContainer" type="CenterContainer" parent="EndGameOverlay" unique_id=882687809]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="EndGameOverlay/CenterContainer" unique_id=640899425]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="EndGameOverlay/CenterContainer/PanelContainer" unique_id=1385702622]
layout_mode = 2
theme_override_constants/margin_left = 26
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer" unique_id=1978576227]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=34053513]
layout_mode = 2
theme_override_fonts/font = ExtResource("14_endui")
theme_override_font_sizes/font_size = 26
text = "Game Over"
horizontal_alignment = 1

[node name="Detail" type="Label" parent="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=338177810]
layout_mode = 2
theme_override_fonts/font = ExtResource("14_endui")
theme_override_font_sizes/font_size = 12
text = "Result details"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1475508038]
custom_minimum_size = Vector2(220, 38)
layout_mode = 2
theme_override_fonts/font = ExtResource("14_endui")
theme_override_font_sizes/font_size = 16
text = "Retry"

[node name="MainMenuButton" type="Button" parent="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=304525144]
custom_minimum_size = Vector2(220, 38)
layout_mode = 2
theme_override_fonts/font = ExtResource("14_endui")
theme_override_font_sizes/font_size = 16
text = "Main Menu"

[connection signal="pressed" from="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="EndGameOverlay/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
